Modify tuple2. Member vars of tuple2 become public. Add `pure` into relational functions.
	modified:   Implementations.org
	modified:   src/tuple2_m.F90
	modified:   test/test_tuple2.F90

--- a/Implementations.org
+++ b/Implementations.org
@@ -2028,7 +2028,7 @@ The definition of either ==== or =/== must be overridden.
 #+begin_src fortran :exports code
   public :: ${tuple2}
   type :: ${tuple2}
-     private
+     !> private
      ${type1} :: fst_
      ${type2} :: snd_
    contains
@@ -2101,39 +2101,39 @@ The definition of either ==== or =/== must be overridden.
 #+begin_src fortran :exports code :noweb no-export
   !> less_${tuple2}: Compare the first elements.
   !> Compare the second elements if the first elements are same.
-  logical function less_${tuple2}(lhs, rhs) result(res)
+  pure logical function less_${tuple2}(lhs, rhs) result(res)
     type(${tuple2}), intent(in) :: lhs, rhs
     res = lhs%fst_ < rhs%fst_
     if (lhs%fst_ == rhs%fst_) then
        res = lhs%snd_ < rhs%snd_
     end if
   end function less_${tuple2}
-  logical function less_equal_${tuple2}(lhs, rhs) result(res)
+  pure logical function less_equal_${tuple2}(lhs, rhs) result(res)
     type(${tuple2}), intent(in) :: lhs, rhs
     res = lhs%fst_ < rhs%fst_
     if (lhs%fst_ == rhs%fst_) then
        res = lhs%snd_ <= rhs%snd_
     end if
   end function less_equal_${tuple2}
-  logical function greater_${tuple2}(lhs, rhs) result(res)
+  pure logical function greater_${tuple2}(lhs, rhs) result(res)
     type(${tuple2}), intent(in) :: lhs, rhs
     res = lhs%fst_ > rhs%fst_
     if (lhs%fst_ == rhs%fst_) then
        res = lhs%snd_ > rhs%snd_
     end if
   end function greater_${tuple2}
-  logical function greater_equal_${tuple2}(lhs, rhs) result(res)
+  pure logical function greater_equal_${tuple2}(lhs, rhs) result(res)
     type(${tuple2}), intent(in) :: lhs, rhs
     res = lhs%fst_ > rhs%fst_
     if (lhs%fst_ == rhs%fst_) then
        res = lhs%snd_ >= rhs%snd_
     end if
   end function greater_equal_${tuple2}
-  logical function equal_${tuple2}(lhs, rhs) result(res)
+  pure logical function equal_${tuple2}(lhs, rhs) result(res)
     type(${tuple2}), intent(in) :: lhs, rhs
     res = lhs%fst_ == rhs%fst_ .and. lhs%snd_ == rhs%snd_
   end function equal_${tuple2}
-  logical function not_equal_${tuple2}(lhs, rhs) result(res)
+  pure logical function not_equal_${tuple2}(lhs, rhs) result(res)
     type(${tuple2}), intent(in) :: lhs, rhs
     res = lhs%fst_ /= rhs%fst_ .or. lhs%snd_ /= rhs%snd_
   end function not_equal_${tuple2}
@@ -2183,31 +2183,32 @@ The definition of either ==== or =/== must be overridden.
 #+begin_src fortran :exports code :tangle "test/test_tuple2.F90" :noweb no-export
   program test_tuple2
     use, intrinsic :: iso_fortran_env
-    use tuple2_m
+    use tuple2_m, only: tup2 => tuple2_int32_int32, &
+         operator(==), operator(/=), operator(<), operator(<=), operator(>), operator(>=)
     implicit none
-    type(tuple2_int32_int32) :: t1, t2
-    t1 = tuple2_int32_int32(1, 1)
+    type(tup2) :: t1, t2
+    t1 = tup2(1, 1)
     <<assert(cond="t1 == t1",       code=10, message="`==` for Tuple2 is illegal.")>>
     <<assert-false(cond="t1 /= t1", code=11, message="`/=` for Tuple2 is illegal.")>>
     <<assert-false(cond="t1 < t1",  code=12, message="`<` for Tuple2 is illegal.")>>
     <<assert(cond="t1 >= t1",       code=13, message="`>=` for Tuple2 is illegal.")>>
     <<assert-false(cond="t1 > t1",  code=14, message="`>` for Tuple2 is illegal.")>>
     <<assert(cond="t1 <= t1",       code=15, message="`<=` for Tuple2 is illegal.")>>
-    t2 = tuple2_int32_int32(1, 2)
+    t2 = tup2(1, 2)
     <<assert-false(cond="t1 == t2", code=20, message="`==` for Tuple2 is illegal.")>>
     <<assert(cond="t1 /= t2",       code=21, message="`/=` for Tuple2 is illegal.")>>
     <<assert(cond="t1 < t2",        code=22, message="`<` for Tuple2 is illegal.")>>
     <<assert-false(cond="t1 >= t2", code=23, message="`>=` for Tuple2 is illegal.")>>
     <<assert-false(cond="t1 > t2",  code=24, message="`>` for Tuple2 is illegal.")>>
     <<assert(cond="t1 <= t2",       code=25, message="`<=` for Tuple2 is illegal.")>>
-    t2 = tuple2_int32_int32(100, 2)
+    t2 = tup2(100, 2)
     <<assert-false(cond="t1 == t2", code=30, message="`==` for Tuple2 is illegal.")>>
     <<assert(cond="t1 /= t2",       code=31, message="`/=` for Tuple2 is illegal.")>>
     <<assert(cond="t1 < t2",        code=32, message="`<` for Tuple2 is illegal.")>>
     <<assert-false(cond="t1 >= t2", code=33, message="`>=` for Tuple2 is illegal.")>>
     <<assert-false(cond="t1 > t2",  code=34, message="`>` for Tuple2 is illegal.")>>
     <<assert(cond="t1 <= t2",       code=35, message="`<=` for Tuple2 is illegal.")>>
-    t2 = tuple2_int32_int32(1, -100)
+    t2 = tup2(1, -100)
     <<assert-false(cond="t1 == t2", code=40, message="`==` for Tuple2 is illegal.")>>
     <<assert(cond="t1 /= t2",       code=41, message="`/=` for Tuple2 is illegal.")>>
     <<assert-false(cond="t1 < t2",  code=42, message="`<` for Tuple2 is illegal.")>>
@@ -2222,7 +2223,7 @@ The definition of either ==== or =/== must be overridden.
 <<tuple2-test>>
 #+end_src
 
-#+RESULTS[d6ff89889b87909e33444adf30a2eeb71bd211a9]: test-tuple2
+#+RESULTS[0e16067e7204adac457913b21b481cc320dd969d]: test-tuple2
 
 **** Tuple2のunwrapped_vector
 #+name: tuple2-unwrapped-module
